i fixed the squished image

--- a/css/styles,.css
+++ b/css/styles,.css
@@ -37,12 +37,12 @@ body{
     text-align: center;
     padding: 0rem 2rem;
 }
-.box img{
-    height: 8rem;
-    border-radius: 50%;
-    margin: 0rem 0rem 1.2rem 0rem;
-    padding-top: 1.1rem;
 
+.box img{
+    border-radius: 50%;
+    height: 8rem;
+    margin-bottom: 1.2rem;
+    margin-top: 1rem;
 }
 h1{
     font-weight: var(--BOLDER-FONT);
@@ -76,6 +76,8 @@ h1{
 
 footer div {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
     font-weight: var(--BOLDFONT);
     color: var(--GREEN);
